# proto

./: README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: fake.yaml
configs/input/: input.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: resnet18.yaml
configs/trainer/: default.yaml
myproto/: README.md
myproto/configs/: config.yaml  input_batch.yaml
myproto/configs/model/: multimodel.yaml
myproto/scripts/: multimodal_batch.py  multimodel_run.py
myproto/src/myproto/datasets/: fake.py  imagenet.py
myproto/src/myproto/llm/: hf_llm.py
myproto/src/myproto/models/: resnet.py
myproto/src/myproto/trainers/: classifier.py
scripts/: train.py
src/myproto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/myproto/datasets/: __init__.py  fake.py
src/myproto/models/: __init__.py
src/myproto/pipelines/: multimodal.py
src/myproto/utils/: logger.py
src/myproto/vlm/: clip.py
